# Gauss-Solution

./: .gitignore  CMakeLists.txt  README.md
data/reports/: hilbert_accuracy_experiment.csv  multiple_rhs_experiment.csv  single_system_experiment.csv
src/: main.c
src/experiments/: experiments.c  experiments.h
src/gauss/: gauss.c  gauss.h
src/logging/: logger.c  logger.h
src/lu/: lu.c  lu.h
src/matgen/: matgen.c  matgen.h
src/timer/: timer.c  timer.h
